<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.ibm.wala</groupId>
  <artifactId>com.ibm.wala.cast.lsp</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <build>
    <sourceDirectory>source</sourceDirectory>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.7.0</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>
    </plugins>
  </build>
  <dependencies>
    <dependency>
      <groupId>commons-io</groupId>
      <artifactId>commons-io</artifactId>
      <version>2.6</version>
    </dependency>
    <dependency>
      <groupId>com.ibm.wala</groupId>
      <artifactId>com.ibm.wala.util</artifactId>
      <version>1.5.0-SNAPSHOT</version>
    </dependency>
    <dependency>
      <groupId>com.ibm.wala</groupId>
      <artifactId>com.ibm.wala.shrike</artifactId>
      <version>1.5.0-SNAPSHOT</version>
    </dependency>
    <dependency>
      <groupId>com.ibm.wala</groupId>
      <artifactId>com.ibm.wala.core</artifactId>
      <version>1.5.0-SNAPSHOT</version>
    </dependency>
    <dependency>
      <groupId>com.ibm.wala</groupId>
      <artifactId>com.ibm.wala.cast</artifactId>
      <version>1.5.0-SNAPSHOT</version>
    </dependency>
    <dependency>
      <groupId>com.ibm.wala</groupId>
      <artifactId>com.ibm.wala.cast.java</artifactId>
      <version>1.5.0-SNAPSHOT</version>
    </dependency>
    <dependency>
      <groupId>org.eclipse.lsp4j</groupId>
      <artifactId>org.eclipse.lsp4j</artifactId>
      <version>0.4.0</version>
    </dependency>
  </dependencies>
</project>
